# llm-based-email-responder

./: .gitignore  README.md  emailassistant.db  pyproject.toml
app/: crud.py  database.py  main.py  models.py  routes.py  schemas.py
app/routes/: generate_email.py  logs.py
